# cohort-retention-decision-pack

./: .gitignore  README.md  README_PUBLIC.md  case_study_readme.md  pyproject.toml  pytest.ini
data_processed/: appendix_top_products_in_chart3_targets_receipt.json  appendix_top_products_in_targets_receipt.json  artifact_manifest.json  confound_m2_family_all_vs_retail.csv  gate_a.json  ingest_preflight.json  ingest_stats.json  memo_numbers.json
docs/: ASSUMPTIONS_LIMITATIONS.md  AUDIT_PUBLIC.md  CHART2_SELECTION_CONTRACT.md  CHART_TALK_TRACKS.md  COHORT_DEFENSE_CARD.md  DECISION_MEMO_1PAGE.md  DRIVER_SPEC_FIRST_PRODUCT_FAMILY.md  EXPERIMENT_BRIEF_SAMPLE.md  HIRING_MANAGER_TLDR.md  METRIC_DICTIONARY.md  PRODUCT_FAMILY_RULES.csv  PROGRESS_REPORT.md  PUBLIC_RELEASE_ALLOWLIST.md  PUBLIC_RELEASE_PLAN.md  QA_CHECKLIST.md  SHIP_CHECKLIST.md  SHIP_PUBLIC.md  SHOPIFY_ADAPTER_SPEC.md  TEACHING_ANSWER_KEY.md  TEACHING_HUB.md  TEACHING_REPORT.md  TECHNICAL_APPENDIX.md  WEEK2_READOUT_TEMPLATE.md
exports/: cohort_retention_teaching.html
notebooks/: cohort_retention_story.html  cohort_retention_story.ipynb  cohort_retention_teaching.html  cohort_retention_teaching.ipynb  cohort_retention_teaching_v3.ipynb
private_teaching/: index.html  module_experiment_readout_sql.html
public_demo/: README.md  adapter_demo_run.md  demo.py  demo_data.csv  demo_summary.csv  shopify_adapter_demo.py  shopify_customer_month_activity.csv  shopify_demo_summary.csv  shopify_mock_orders.csv  shopify_order_lines_canonical.csv
public_release/: README_PUBLIC.md  case_study_readme.md
(+43 files in other folders)
