[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "revops-retention"
version = "0.1.0"
description = "Cohort retention v1.2 pipeline"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "openpyxl>=3.1",
  "matplotlib>=3.7",
  "reportlab>=4.0",
  "jupyter>=1.0",
  "nbconvert>=7.0",
  "pytest>=7.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "pytest>=7.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
